Regression: Crash when switched to vertex paint mode #98884

Closed
opened 2022-06-14 15:39:36 +02:00 by Thiago Lessa · 19 comments

System Information
Operating system: win 10 home single (10, compilation 19044)
Graphics card: Geforce GTX 1060 6 GB

Blender Version
Broken: 3.2 release
Worked: 3.1 release
Crash caused by 575ade22d4

Short description of error

**System Information** Operating system: win 10 home single (10, compilation 19044) Graphics card: Geforce GTX 1060 6 GB **Blender Version** Broken: 3.2 release Worked: 3.1 release Crash caused by 575ade22d4 **Short description of error** - Open uploaded .blend file - Enable GPU Subdivision - Switched to Vertex/weight paint mode [#98884.blend](https://archive.blender.org/developer/F13166586/T98884.blend) [crash when entering vertex mode.mp4](https://archive.blender.org/developer/F13163097/crash_when_entering_vertex_mode.mp4)
Author

Added subscriber: @lessab3d

Added subscriber: @lessab3d

Added subscriber: @pixeltrain3d

Added subscriber: @pixeltrain3d

Works for me with a default cube with skin+subdiv. No crash.
Do you have a .blend?

Works for me with a default cube with skin+subdiv. No crash. Do you have a .blend?
Author

I recorded how this bug occurs
crash when entering vertex mode.mp4

I recorded how this bug occurs [crash when entering vertex mode.mp4](https://archive.blender.org/developer/F13163097/crash_when_entering_vertex_mode.mp4)

Works for me without crash, same steps like in your video in Release 3.2 .
version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
macOS-12.4-x86_64-i386-64bit

Works for me without crash, same steps like in your video in Release 3.2 . version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e369187 macOS-12.4-x86_64-i386-64bit
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for reporting. I can confirm in 3.3 (04a75c90d58ab393db5ce7d37f29655caa82097d)
Calling it a Regression as crash does not happen in 3.1. Will bisect.

blender.exe         :0x00007FF650B9AC40  blender::draw::extract_lines_loose_geom_subdiv C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\mesh_extractors\extract_mesh_ibo_lines.cc:196
blender.exe         :0x00007FF650B54350  blender::draw::mesh_buffer_cache_create_requested_subdiv C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_extract_mesh.cc:901
blender.exe         :0x00007FF650B16DB0  draw_subdiv_create_requested_buffers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_subdivision.cc:2091
blender.exe         :0x00007FF650B17CE0  DRW_create_subdivision C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_subdivision.cc:2240
blender.exe         :0x00007FF650B3B1A0  DRW_mesh_batch_cache_create_requested C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.cc:2083
blender.exe         :0x00007FF650B287D0  drw_batch_cache_generate_requested C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache.c:3360
blender.exe         :0x00007FF650B14E40  drw_engines_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1074
blender.exe         :0x00007FF650B11620  DRW_draw_render_loop_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1673
blender.exe         :0x00007FF650B12710  DRW_draw_view C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1593
blender.exe         :0x00007FF651247BE0  view3d_main_region_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_draw.c:1564
blender.exe         :0x00007FF650699690  ED_region_do_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:547
blender.exe         :0x00007FF650680230  wm_draw_window_offscreen C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:853
blender.exe         :0x00007FF650680080  wm_draw_window C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1020
blender.exe         :0x00007FF65067FB20  wm_draw_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1231
blender.exe         :0x00007FF650659A90  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:630
blender.exe         :0x00007FF650655210  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552
blender.exe         :0x00007FF6518057F4  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFEEFC27020  BaseThreadInitThunk
ntdll.dll           :0x00007FFEF0142630  RtlUserThreadStart```
Hi, thanks for reporting. I can confirm in 3.3 (`04a75c90d58ab393db5ce7d37f29655caa82097d`) Calling it a Regression as crash does not happen in 3.1. Will bisect. ```lines=10 blender.exe :0x00007FF650B9AC40 blender::draw::extract_lines_loose_geom_subdiv C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\mesh_extractors\extract_mesh_ibo_lines.cc:196 blender.exe :0x00007FF650B54350 blender::draw::mesh_buffer_cache_create_requested_subdiv C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_extract_mesh.cc:901 blender.exe :0x00007FF650B16DB0 draw_subdiv_create_requested_buffers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_subdivision.cc:2091 blender.exe :0x00007FF650B17CE0 DRW_create_subdivision C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_subdivision.cc:2240 blender.exe :0x00007FF650B3B1A0 DRW_mesh_batch_cache_create_requested C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.cc:2083 blender.exe :0x00007FF650B287D0 drw_batch_cache_generate_requested C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache.c:3360 blender.exe :0x00007FF650B14E40 drw_engines_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1074 blender.exe :0x00007FF650B11620 DRW_draw_render_loop_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1673 blender.exe :0x00007FF650B12710 DRW_draw_view C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1593 blender.exe :0x00007FF651247BE0 view3d_main_region_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_draw.c:1564 blender.exe :0x00007FF650699690 ED_region_do_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:547 blender.exe :0x00007FF650680230 wm_draw_window_offscreen C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:853 blender.exe :0x00007FF650680080 wm_draw_window C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1020 blender.exe :0x00007FF65067FB20 wm_draw_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1231 blender.exe :0x00007FF650659A90 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:630 blender.exe :0x00007FF650655210 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552 blender.exe :0x00007FF6518057F4 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFEEFC27020 BaseThreadInitThunk ntdll.dll :0x00007FFEF0142630 RtlUserThreadStart```
Pratik Borhade changed title from Crashes when entering vertex paint mode... to Regression: Crash when switched to vertex paint mode 2022-06-15 07:13:13 +02:00
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Doesn't crash prior to 575ade22d4
@JosephEagar hi, can you check?

Doesn't crash prior to 575ade22d4 @JosephEagar hi, can you check?

Removed subscriber: @pixeltrain3d

Removed subscriber: @pixeltrain3d

Added subscriber: @KevinCurry_Unity

Added subscriber: @KevinCurry_Unity

index is 0 at the first assertion here:

BLI_INLINE BMEdge *BM_edge_at_index(BMesh *bm, const int index)
{
 BLI_assert((index >= 0) && (index < bm->totedge));
  BLI_assert((bm->elem_table_dirty & BM_EDGE) == 0);
  return bm->etable[index];
}
index is 0 at the first assertion here: ``` BLI_INLINE BMEdge *BM_edge_at_index(BMesh *bm, const int index) { BLI_assert((index >= 0) && (index < bm->totedge)); BLI_assert((bm->elem_table_dirty & BM_EDGE) == 0); return bm->etable[index]; } ```
Joseph Eagar was assigned by Dalai Felinto 2022-06-28 10:16:01 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Blender 3.2.1 is scheduled for release soon. Any chance to fix this still? @JosephEagar

Blender 3.2.1 is scheduled for release soon. Any chance to fix this still? @JosephEagar

This issue was referenced by fab5234f14

This issue was referenced by fab5234f14b74f57cfbcbe622e0fb5a3a7bbad62

This issue was referenced by 3f5073a8e2

This issue was referenced by 3f5073a8e298c474fac36f7193d291e6f9579277
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Listed both report and fix in corrective release list. Feel free to remove if you think commit might break other functionality.

Listed both report and fix in corrective release list. Feel free to remove if you think commit might break other functionality.
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98884
No description provided.