Fix T98884: Fix edge case crashes in gpu subdiv cache code